<resources>

    <string name="app_name">A-pills</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="relationship">Relationship</string>
    <string name="patient_data">Patient Data</string>
    <string name="todo">TODO</string>
    <string name="change_picture">Change Picture</string>
    <string name="age">Age</string>
    <string name="allergies">Allergies</string>
    <string name="history">History</string>
    <string name="data_of_the_responsable">Data of the responsable</string>
    <string name="sufferings">sufferings</string>
</resources>
