<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper">


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                style="@style/LinearBack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                android:background="#CCB1BFD4"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/button_background"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/patient_data"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/todo"
                    app:srcCompat="@drawable/profile" />

                <Button
                    android:id="@+id/button2"
                    style="@style/ButtonP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:text="@string/change_picture" />

                <EditText
                    android:id="@+id/patient_name"
                    style="@style/LinearBack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@android:color/background_light"
                    android:ems="10"
                    android:hint="@string/full_name"
                    android:inputType="textPersonName"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/age"
                    style="@style/LinearBack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginBottom="14dp"
                    android:background="@android:color/background_light"
                    android:ems="10"
                    android:hint="@string/age"
                    android:inputType="textPersonName|number"
                    android:padding="10dp" />

                <Spinner
                    android:id="@+id/sufferings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/edit_background" />

                <EditText
                    android:id="@+id/allergies"
                    style="@style/LinearBack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_margin="10dp"
                    android:background="@android:color/background_light"
                    android:ems="10"
                    android:hint="@string/allergies"
                    android:inputType="textPersonName"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/history"
                    style="@style/EditBack"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_margin="10dp"
                    android:ems="10"
                    android:hint="@string/history"
                    android:inputType="textMultiLine"
                    android:padding="10dp" />

                <Button
                    android:id="@+id/button3"
                    style="@style/ButtonP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/register" />

            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


</RelativeLayout>