<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

        <LinearLayout
            style="@style/LinearBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="0dp"
            android:background="#CCB1BFD4"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="159dp"
                android:layout_height="136dp"
                android:layout_margin="10dp"
                android:src="@mipmap/ic_launcher_round"
                app:srcCompat="@mipmap/ic_launcher_round" />

            <EditText
                android:id="@+id/CORREO_ELECTRONICO"
                style="@style/EditBack"
                android:layout_height="wrap_content"

                android:layout_margin="20dp"
                android:background="@android:color/background_light"
                android:ems="10"
                android:hint="@string/username"
                android:padding="5dp" />

            <EditText
                android:id="@+id/PASSWORD"
                style="@style/EditBack"
                android:layout_height="wrap_content"

                android:layout_margin="20dp"
                android:background="@android:color/background_light"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="5dp">

            </EditText>

            <Button
                android:id="@+id/login"
                style="@style/ButtonP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_margin="20dp"
                android:text="@string/login" />

            <Button
                android:id="@+id/register"
                style="@style/ButtonP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_margin="10dp"
                android:layout_marginBottom="25dp"
                android:text="@string/register" />

        </LinearLayout>
    </ScrollView>


</RelativeLayout>